--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2,7 +2,6 @@
 	author = {Tom M. Apostol},
 	title = {Introduction to Analytic Number Theory},
 	publisher = {Springer},
-
 	year = {1976},
 	ISBN = {978-1-4419-2805-4}
 }
@@ -65,4 +64,20 @@
     title = "On the unique factorization theorem for formal power series",
     journal = "Journal of Mathematical Sciences, Kyoto Univ.",
     year = "1967"
+}
+@article{Coh1,
+    author = "Eckford Cohen",
+    title = "A class of arithmetical functions",
+    journal = "Proceedings of the National Academy of Sciences of the United States of America",
+    year = "1955",
+    volume = "41",
+    number = "11"
+}
+@article{Bell1,
+    author = "E. T. Bell",
+    title = "Outline of a Theory of Arithmetical Functions in their Algebraic Aspects",
+    journal = "The Journal of the Indian Mathematical Society",
+    year = "1928",
+    volume = "17",
+    pages = "249-260"
 }
