--- a/lec_01.tex
+++ b/lec_01.tex
@@ -4,10 +4,32 @@
 \markboth{Introducción}{Introducción}
 \addcontentsline{toc}{section}{Introducción}
 
-Euclides (circa 325 a. C.) probó que $2^{p-1}(2^p-1)$ es un número perfecto si y sólo si $2^p-1$ es un número primo \cite{Di1}. En 1638, Descartes afirmó que todo número perfecto par es de la forma descrita por Euclides y que todo número perfecto impar debe ser de la forma $ps^2$, con $p$ un número primo. Dickson \cite{Di1} dió una prueba para lo primero, aunque Euler ya había probado ambos casos mucho antes y sus demostraciónes no salieron a la luz hasta después de su muerte.
+En 1640 Fermat afirmó que poseía una demostración del hecho de que si $p$ es un número primo y $x$ es cualquier entero no divisible por $p$, entonces $x^{p-1}-1$ es divisible por $p$. Ahora llamado Teorema de Fermat, es uno de los teoremas fundamentales de la teoría de números \cite{Di1}. Este resultado fue generalizado más tarde por Euler en 1760: si $\varphi(n)$ denota el número de enteros positivos no mayores a $n$ que son primos relativos a $n$, entonces $x^{\varphi(n)-1}-1$ es divisible por $p$.
+Aunque la función $\varphi$ de Euler se definió para enunciar la generalización anterior, ésta posee remarcables propiedades que hacen valer la pena estudiarla por sí misma. Por ejemplo, en 1801, Gauss probó que si $n\in\mathbb{N}$ y $d_1,d_2,\cdots,d_k$ son todos los divisores positivos de $n$, entonces $\varphi(d_1)+\varphi(d_2)+\cdots+\varphi(d_k)=n$.
 \bigskip
 
-Mersenne publicó en 1644 los primeros once números perfectos pares, dados por la fórmula de Euclides para los primos $p=2,3,5,7,13,17,19,31,67,127$ y $257$, pero se equivocó al agregar al $67$ y al no incluir a los primos $61,89$ y $107$. Más tarde en 1640 y probablemente influenciado por éstas observaciones sobre números perfectos, Fermat consideró a los números de la forma $a^{p-1}-1$, donde $p$ es cualquier primo y $a$ cualquier entero. Observó que si $a$ no es divisible por $p$ entonces $a^{p-1}-1$ es divisible por $p$, hecho que se conocería más tarde como el Teorema de Fermat. El caso $a=2$ era conocido en China al menos desde el año 500 a. C. La primera demostración publicada fue dada por Euler en 1736 y más tarde generalizada a cualquier entero: si $\varphi(n)$ denota el número de enteros positivos menores que $n$ que son primos relativos a $n$, entonces $a^{\varphi(n)}-1$ es divisible por $n$, para cualquier entero $a$ primo relativo a $n$.
+A. F. Möbius definió la función $\mu(n)$ como cero si $n$ es divisible por un cuadrado distinto de 1, y como $(-1)^k$ si $n$ es producto de $k$ primos distintos, mientras que $\mu(1)=1$ y empleó dicha función en la inversión de series:
+\begin{equation*}
+    F(x) = \sum_{s=1}^{\infty} \frac{f(s x)}{s^n} \text{ implica } f(x) = \sum_{s=1}^{\infty} \mu(s) \frac{F(s x)}{s^n}.
+\end{equation*}
+
+Dedekind probó que si $F(m) = \sum f(d)$, donde $d$ recorre todos los divisores positivos de $m$, entonces
+\begin{equation*}
+    f(n) = F(n) - \sum F \left( \frac{n}{a} \right) + \sum F \left(  \frac{n}{a b} \right) - \sum F \left( \frac{n}{a b c} \right) + \cdots,
+\end{equation*}
+donde las sumas se extienden sobre todas las combinaciónes de los distintos factores primos $a, b, \ldots$ de $n$. Laguerre expresó la ecuación anterior como
+\begin{equation*}
+    f(n) = \sum \mu \left(  \frac{n}{d} \right) F(d).
+\end{equation*}
+En particular, como $\sum \varphi(d) = n$, se tiene
+\begin{equation*}
+    \varphi(n) = n - \sum \frac{n}{a} + \sum \frac{n}{a b} - \cdots = n \left( 1 - \frac{1}{a} \right) \left( 1 - \frac{1}{b} \right) \cdots
+\end{equation*}
+
+F. Mertens notó que $\sum \mu(d) = 0$ si $n>1$, donde $d$ recorre todos los divisores positivos de $n$.
 \bigskip
 
-Aunque la función $\varphi$ de Euler se definió inicialmente para enunciar la generalización anterior, ésta posee remarcables propiedades que hacen valer la pena estudiarla por sí misma. Por ejemplo, en 1801, Gauss probó que si $n\in\mathbb{N}$ y $d_1,d_2,\cdots,d_k$ son todos los divisores positivos de $n$, entonces $\varphi(d_1)+\varphi(d_2)+\cdots+\varphi(d_k)=n$.
+N. V. Bugaiev consideró la función $\nu(x)$ con valor $\log p$ si $x$ es potencia de un primo $p$ y con valor 0 en otro caso. Si $d$ recorre todos los divisores positivos de $n$, $\sum \nu(d) = \log n$ implica que $\sum \mu(d) \log d = -\nu(n)$. Bugaiev llamó a $F(n) = \sum f(d)$, la integral numérica de $f(n)$, donde la suma es sobre todos los divisores positivos $d$ de $n$, y llamó a $f(n)$ la derivada numérica de la función $F(n)$.
+\bigskip
+
+En 1857 Liouville estableció sin prueba un gran número de identidades interesantes, en sus cuatro artículos \emph{Sur quelques functions numeriques}, sobre funciones ariméticas específicas, como la suma y número de divisores de un entero, la función $\varphi$ de Euler, la función de Möbius $\mu$, su propia función $\lambda$, etc. Afirmó que estaba en posesión de un método general de extrema simplicidad, con el que tales identidades se podrían escribir a voluntad. Tales identidades provaron ser un valioso punto de partida para la evaluación asintótica de funciones aritméticas, pero su interés peculiar era más bien algebráico.
