--- a/lec_02.tex
+++ b/lec_02.tex
@@ -1,298 +1,170 @@
-%%% Preliminares
+%%% Estructura del anillo
 \newpage
-\pagenumbering{arabic}
-\section{El teorema fundamental de la aritmética}
-
-\subsection{Algoritmo de la división}
+\section{Estructura del anillo de funciones aritméticas}
 
 \begin{definition}
-Sean $a,b\in \mathbb{Z}$. Decimos que $a$ divide a $b$, o que $a$ es factor de $b$, o que $b$ es múltiplo de $a$, si existe $q\in \mathbb{Z}$ tal que $b=aq$.
-\end{definition}
-\textsc{Notación}. Utilizaremos la expresión $a\mid b$ para indicar que $a$ divide a $b$. La notación $a\centernot\mid b$ significa que $a$ no divide a $b$.
-
-\begin{proposition}
-\label{prop:prop1}Las siguientes propiedades de divisibilidad serán ocasionalmente útiles:
-
-\begin{enumerate}[label=\textnormal{(\roman*)}]
-	\item $a\mid a, \forall \: a\in \mathbb{Z}$
-	\item $a\mid 0,\forall \: a\in \mathbb{Z}$
-	\item $0\mid a\iff a=0$
-	\item $1\mid a,\forall \: a\in \mathbb{Z}$
-	\item $b\mid 1\iff |a|=1$
-	\item $a\mid b$ y $b\mid a\implies |a|=|b|$
-	\item $a\mid b$ y $b\mid c$ implica $a\mid c$
-	\item $a\mid b \implies a\mid bc,\forall \: c\in \mathbb{Z}$
-	\item $a\mid b$ y $a\mid c$ implica $a\mid a+c$
-	\item $a\mid b$ y $a\mid c$ implica $a\mid bs+c t,\forall \: s,t\in \mathbb{Z}$
-	\item $|a|\mid |b| \iff a\mid b \iff -a\mid b \iff a\mid -b \iff -a\mid -b$
-	\item $a\mid b \implies ca \mid c b,\forall \: c\in \mathbb{Z}$
-	\item $c a \mid c b$ y $c\neq 0$ implica que $a \mid b$.
-\end{enumerate}
-\end{proposition}
-
-\begin{proposition}
-\label{prop:des1}Si $a\mid b$ y $b \neq 0$, entonces $|a|\leq|b|$.
-\end{proposition}
-\begin{proof}
-Como $a \mid b$, existe $q\in \mathbb{Z}$ tal que $b=aq$ y dado que $b \neq 0$ entonces $q \neq 0$, de manera que $1\leq |q|$, luego $|a|\leq |a||q|=|b|$.
-\end{proof}
-
-\begin{theorem}[Algoritmo de la división]
-Si $a,b\in \mathbb{Z}$ y $b \neq 0$, entonces existen únicos $q,r\in \mathbb{Z}$ tales que 
-\begin{equation*}
-	a=bq+r\hspace*{0.5cm}\textnormal{con}\hspace*{0.5cm} 0\leq r<|b|
-\end{equation*}
-\end{theorem}
-\begin{proof}
-Supongamos primero que $b>0$. Sea 
-\begin{equation*}
-	S=\left\{a-bx \: : \: x\in \mathbb{Z}\textnormal{ y }0\leq a-bx\right\}.
-\end{equation*}
-Como $0<b$, entonces $1\leq b$, luego $-b\leq -1$, por tanto $-b|a|\leq -|a|$, pero $-|a|\leq a$, así que $-b|a|\leq a$, osea $0\leq a+b|a|=a-b(-|a|)$. Luego el conjunto $S$ es no vacío, de manera que debe tener un elemento mínimo $r$, escribamos $r=a-bq$. Entonces $a=bq+r$ y $0\leq r$ por elección de $r$. Si $b\leq r$, entonces $0\leq r-b<r$, donde $r-b=a-bq-b=a-b(q+1)\in S$, lo que contradice la elección de $r$, así que necesariamente $r<b$. Luego $q,r$ son los enteros buscados. Supongamos ahora que $b<0$. Entonces $|b|=-b>0$ y por lo anterior existen $q',r'\in \mathbb{Z}$ tales que $a=-bq'+r'$ con $0\leq r'<|b|$, es decir, $a=b(-q')+r'$ y por tanto los enteros buscados son ahora $-q'$ y $r'$. 
-\bigskip
-
-Finalmente, veamos que estos tales enteros son únicos. Supongamos que $q,r,q',r'\in\mathbb{Z}$ son enteros tales que 
-\begin{align*}
-	a &=bq+r,\hspace*{0.3cm}0\leq r<|b| \\
-	a &=bq'+r',\hspace*{0.3cm}0\leq r'<|b|.
-\end{align*}
-Entonces $bq+r=bq'+r'$, es decir, $b(q-q')=r'-r$, osea $b \mid r'-r$. Si $r'-r \neq 0$, por la proposición \eqref{prop:des1} se debe cumplir que $|b|\leq |r'-r|$. Por otro lado, se tiene que $-|b|<-r$ y $0\leq r'$, por tanto $-|b|<r'-r$. Análogamente, $-r\leq 0$ y $r'<|b|$ implican que $r'-r<|b|$. Juntando estas dos desigualdades obtenemos que $|r'-r|<|b|$, osea $|b|<|b|$, lo cual es imposible. En consecuencia, $r'-r=0$ y cómo $b \neq 0$ necesariamente $q-q'=0$, es decir, $r=r'$ y $q=q'$.
-\end{proof}
-
-\subsection{Máximo común divisor}
-
-\begin{proposition}[\textsc{y definición}]
-\label{prop:mcd1}Si $a,b\in \mathbb{Z}$ con $a\neq 0$, entonces el conjunto 
-\begin{equation*}
-	D=\left\{c\in \mathbb{N} \: : \: c \mid a\textnormal{ y }c \mid b\right\}
-\end{equation*}
-es no vacío y finito. Al elemento máximo de $D$ se le llama máximo común divisor de $a$ y $b$.
-\end{proposition}
-\begin{proof}
-Como $1$ divide a cualquier entero, entonces $1\in D$. Si $c\in D$ se tiene, en particular, que $c \mid a$ y como $a\neq 0$, por la proposición \eqref{prop:des1} se tiene que $|c|=c\leq |a|$. Luego $D\subset \left\{1,\ldots ,|a|\right\}$ y por tanto $D$ es finito por ser subconjunto de un conjunto finito.
-\end{proof}
-\bigskip
-
-\textsc{Notación}. Para decir que un número $d\in \mathbb{Z}$ es máximo común divisor de $a$ y $b$, escribiremos $d=(a,b)$ ó $d=\textnormal{mcd}\left\{a,b\right\}$.
-
-\begin{remark}
-El máximo común divisor de dos números $a,b$ no ambos cero es único por ser el elemento máximo de un conjunto. También se sigue sin más que $(a,b)=(b,a)$.
-\end{remark}
-
-\begin{theorem}
-\label{thm:lin}Sean $a,b\in \mathbb{Z}$ con $a\neq 0$ y sea $d=(a,b)$. Entonces el conjunto 
-\begin{equation*}
-	L=\left\{a s+ b t>0 \: : \: s,t\in \mathbb{Z}\right\}\subset \mathbb{N}
-\end{equation*}
-es no vacío y su elemento mínimo es igual a $d$.
-\end{theorem}
-\begin{proof}
-Si $a>0$, entonces $0<a(1)+b(0)\in L$ y si $a<0$ entonces $-a>0$, de manera que $0<a(-1)+b(0)\in L$. En cualquier caso $L$ es no vacío. Dado que $\mathbb{N}$ está bien ordenado, $L$ admite un elemento mínimo, sea $d'$ este elemento y escribamos $d'=a s+ b t$, para algunos $s,t\in \mathbb{Z}$. Afirmamos que $d' \mid a$ y $d'\mid b$. En efecto, supongamos por ejemplo que $d'\centernot\mid a$. Por el algoritmo de la división, existen $q,r\in \mathbb{Z}$ tales que 
-\begin{equation*}
-	a=d'q+r\hspace*{0.3cm}\textnormal{con}\hspace*{0.3cm}0\leq r<d'.
-\end{equation*}
-Más aún, $0\neq r$ pues por hipótesis $d'\centernot\mid a$, así que $0<r$. Entonces 
-\begin{align*}
-	0<r &= a-d'q \\
-		&= a-(a s+ b t)q \\
-		&= a-a s q-b t q \\
-		&= a(1-s q)+b(-t q) \in L
-\end{align*}
-lo que contradice la elección de $d'$, así que necesariamente $d' \mid a$. Similarmente se demuestra que $d' \mid b$. Luego $d'\in D$, con $D$ definido como en la proposición \eqref{prop:mcd1} y por tanto $d'\leq d$, pues $d$ es el elemento máximo de $D$.
-\bigskip
-
-Por otro lado, como $d \mid a$ y $d \mid b$ por ser $d$ un elemento de $D$, entonces $d \mid a s+b t=d'$ en virtud del inciso (x) de la proposición \eqref{prop:prop1}, luego $d\leq d'$, pues $d'\neq 0$ y ambos $d',d$ son mayores que cero. Se sigue finalmente que $d=d'$.
-\end{proof}
-
-\begin{remark}
-Si $d=(a,b)$, el teorema anterior nos permite escribir $d=a s+ b t$, para algunos $s,t\in \mathbb{Z}$. A los coeficientes $s,t$ se les llama \textit{coeficientes de Bezout} y se pueden calcular explicitamente usando, por ejemplo, el algoritmo de Euclides. Véase \cite{Zal1-2014}.
-\end{remark}
-
-\begin{proposition}
-Sean $a,b\in \mathbb{Z}$ con $a\neq 0$. Si un número $d'\in \mathbb{N}$ es tal que 
-
-\begin{enumerate}[label=\textnormal{(\roman*)}]
-	\item $d' \mid a$ y $d' \mid b$
-	\item $c \mid a$ y $c \mid b \implies c \mid d',\:\forall \: c\in \mathbb{Z}$
-\end{enumerate}
-entonces $d'$ es el máximo común divisor de $a$ y $b$. Y recíprocamente, el máximo común divisor de $a$ y $b$ satisface las condiciones (i) y (ii).
-\end{proposition}
-\begin{proof}
-En efecto, tenemos que $d=(a,b)$ es el elemento máximo del conjunto $D=\left\{c\in \mathbb{N} \: : \: c \mid a\textnormal{ y }c \mid b\right\}$. Por (i) se tiene que $d'\in D$, de tal manera que $d'\leq d$. Por otro lado, como $d\in D$, entonces $d \mid a$ y $d \mid b$, por tanto el inciso (ii) asegura que $d \mid d'$, luego $d\leq d'$. En consecuencia, $d=d'$.
-\bigskip
-
-Veamos ahora que $d$ también satisface ambas condiciones. Como  $d\in D$, entonces $d$ satisface (i). Ahora, por el teorema \eqref{thm:lin}, existen $s,t\in \mathbb{Z}$ tales que $d=a s+ b t$. Si $c\in \mathbb{Z}$ es tal que $c \mid a$ y $c \mid b$, entonces $c \mid a s+b t=d$ y como $c\in \mathbb{Z}$ fue arbitrario, entonces $d$ también cumple la condición (ii).
-\end{proof}
-
-\begin{proposition}
-Si $a,b\in \mathbb{Z}$ son no ambos cero y $c\in \mathbb{Z}\setminus \left\{0\right\}$, entonces
-
-\begin{enumerate}[label=\textnormal{(\roman*)}]
-	\item $(a,b)=(|a|,|b|)$
-	\item $(ca,cb)=|c|(a,b)$
-	\item $(c,1)=1$. 
-\end{enumerate}
-\end{proposition}
-
-\begin{proposition}
-Si $r \in \mathbb{N}$, $r=e q_1$, $r= d q_2$, $d=(q_1,d)k_1$ y $e=(q_2,e) k_2$ entonces $k_1=k_2$.
-\end{proposition}
-\begin{proof}
-Nótese que $q_1,q_2$ enteros positivos, además $(q_1 q_2, r) = (q_1 q_2, r)$, luego $(q_1 q_2,e q_1)=(q_1 q_2,d q_2)$ y por tanto $q_1 (q_2,e)=q_2 (q_1,d)$ por la proposición anterior. Luego, dado que $r=(q_2,e)k_2 q_1=(q_1,d)k_1 q_2$, la ley de cancelación implica que $k_1 = k_2$.
-\end{proof}
-
-\begin{corollary}\label{cor:mcd1}
-Si $r \in \mathbb{N}$, $e \mid r$ y $d \mid r$ con $e,r \in \mathbb{N}$, entonces
-\begin{equation*}
-    d/\left( r/e,d \right) = e/\left( r/d,e \right).
-\end{equation*}
-\end{corollary}
-
-\subsection{Mínimo común múltiplo}
-
-\begin{proposition}[y definición]\label{prop:mcm1}
-Si $a,b\in \mathbb{Z}\setminus \left\{0\right\}$, entonces el conjunto 
-\begin{equation*}
-	M=\left\{m\in \mathbb{N} \: : \: a \mid m\textnormal{ y }b \mid m\right\}\subset \mathbb{N}
-\end{equation*}
-es no vacío. Al elemento mínimo de $M$ se le llama mínimo común múltiplo de $a$ y $b$.
-\end{proposition}
-
-\begin{proof}
-Notemos que como $a,b\in \mathbb{Z}\setminus \left\{0\right\}$, entonces $1\leq |a b|$, $a \mid |a b|$ y $b \mid |a b|$. Luego $|a b|\in M$.
-\end{proof}
-\textsc{Notación}. Para indicar que $m\in \mathbb{N}$ es mínimo común múltiplo de $a$ y $b$, escribiremos $m=[a,b]$ ó $m=\textnormal{mcm}\left\{a,b\right\}$.
-
-\begin{remark}
-El mínimo común múltiplo de dos números $a,b$ distintos de cero es único. Además, $[a,b]=[b,a]$.
-\end{remark}
-\begin{proposition}
-Sean $a,b\in \mathbb{Z}\setminus\left\{0\right\}$. Si un número $m'\in \mathbb{N}$ es tal que 
-
-\begin{enumerate}[label=\textnormal{(\roman*)}]
-	\item $a \mid m'$ y $b \mid m'$
-	\item $a \mid c$ y $b \mid c \implies m' \mid c,\:\forall \: c\in \mathbb{Z}$
-\end{enumerate}
-entonces $m'$ es el mínimo común múltiplo de $a$ y $b$. Y recíprocamente, el mínimo común múltiplo satisface las condiciones (i) y (ii).
-\end{proposition}
-\begin{proof}
-Sea $d=[a,b]$. Por (i) se tiene que a $\mid m'$ y $b \mid m'$, entonces $m'\in M$, con $M$ definido como en la proposición \eqref{prop:mcm1}. Luego $m\leq m'$ por ser $m$ el elemento mínimo de este conjunto. Por otro lado, como $a \mid m$ y $b \mid m$, el inciso (ii) asegura que $m' \mid m$, luego $m'\leq m$ y por tanto $m'=m$.
-\bigskip
-
-Además, $m$ también satisface estas condiciones. La condición (i) se cumple por ser $m$ un elemento de $M$, es decir, $a \mid m$ y $b \mid m$. Si $c\in \mathbb{Z}$ es tal que $a \mid c$ y $b \mid c$, por el algortimo de la división, existen $q,r\in \mathbb{Z}$ tales que $c=mq+r$ con $0\leq r<m$. Como $a \mid c$ y $a \mid m$, entonces $a \mid c-mq=r$ y analogamente $b \mid r$. Si $0<r$ esto nos llevaría a una contradicción en la elección de $m$, así que necesariamente $r=0$ y por tanto $c=mq$, o lo que es lo mismo, $m \mid c$. Como $c\in \mathbb{Z}$ fue arbitrario, entonces $m$ satisface la condición (ii).
-\end{proof}
-
-\begin{theorem}
-Si $a,b\in \mathbb{Z}\setminus \left\{0\right\}$, entonces $|a b|=(a,b)[a,b]$.
-\end{theorem}
-\begin{proof}
-Como $a\neq 0$, existe $d=(a,b)$. Se tiene que $d \mid a$ y $d \mid b$, por tanto, $d \mid |ab|$ y en consecuencia existe $m\in \mathbb{Z}$ tal que $|ab|=dm$. Más aún, $m\in \mathbb{N}$, pues $|a b|$ y $d$ son enteros positivos. Afirmamos que $m=[a,b]$.
-\bigskip
-
-(i) Notemos que $d \mid a$ y $d \mid b$ y por tanto $d \mid |a|$ y $d \mid |b|$, por lo que existen $q_{1},q_{2}\in \mathbb{Z}$ tales que $|a|=dq_{1}$ y $|b|=dq_{2}$, por lo tanto, $|a b|=d^{2}q_{1}q_{2}=dm$, lo cual implica que $dq_{1}q_{2}=m$ de tal manera que $|a|q_{2}=m$ y $|b|q_{1}=m$, es decir, $|a| \mid m$ y $|b| \mid m$, luego $a \mid m$ y $b \mid m$.
-\bigskip
-
-(ii) Si $c\in \mathbb{Z}$ es tal que $a \mid c$ y $b \mid c$ entonces  $|a|\mid c$ y $|b|\mid c$, por tanto existen $q_{1},q_{2}\in \mathbb{Z}$ tales que $c=|a|q_{1}$ y $c=|b|q_{2}$. Notemos que también por el inciso anterior, $a \mid m$ y $b \mid m$, por lo que $|a|\mid m$ y $|b| \mid m$, por tanto, existen $r_{1},r_{2}\in \mathbb{Z}$ tales que $m=|a|r_{1}$ y $m=|b|r_{2}$. Además, como $d=(a,b)=(|a|,|b|)$, existen $s,t\in \mathbb{Z}$ tales que $d=|a| s+|b| t$, así que $d m=|a| s m+|b| t m$. Más aún $|a b|\neq 0$, pues $a$ y $b$ son distintos de cero, así
-\begin{align*}
-	d m=|a| s m+|b| t m &\implies |a b| = d m=|a| s |b| r_{2}+|b| t |a| r_{1} \\
-					&\implies |a b|=|a b|(sr_{2}+tr_{1}) \\
-					&\implies 1=s r_{2}+t r_{1} \\
-					&\implies c=c s r_{2}+c t r_{1} \\
-					&\implies c=|b| q_{2}s r_{2}+|a| q_{1} t r_{1} \\
-					&\implies c=m q_{2} s+m q_{1}t=m(q_{2}s+q_{1}t) \\
-					&\implies m \mid c.
-\end{align*}
-De (i) y (ii) se sigue que $m=[a,b]$ y por tanto $|a b|=(a,b)[a,b]$.
-\end{proof}
-
-\subsection{Primos y factorización única}
-
-\begin{definition}
-Se dice que dos enteros $a$ y $b$ son \textbf{coprimos} o \textbf{primos relativos} si $(a,b)=1$.
+A partir de ahora, nos referiremos como \textbf{función aritmética} a cualquier función $f : \mathbb{N} \longrightarrow \mathbb{C}$. Se denota al conjunto de todas las funciones aritméticas como $\mathcal{A}$.
 \end{definition}
 
-\begin{theorem}[Lema de Euclides]
-Si $a \mid bc$ y $(a,b)=1$ entonces $a \mid c$.
-\end{theorem}
-\begin{proof}
-Si $(a,b)=1$, podemos escribir $1=a s+b t$, donde $s,t\in \mathbb{Z}$. Luego $c=a(s c)+b c(t)$ y como $a \mid a$ y $a \mid bc$ por hipótesis, entonces $a \mid c$.
-\end{proof}
-
-\begin{definition}
-Dado $p\in \mathbb{Z}$, con $p>1$, decimos que $p$ es un \textbf{número primo} si tiene exactamente dos divisores positivos, $1$ y $p$ mismo.
+\begin{definition}[Función constante]
+La función constante de valor $c \in \mathbb{C}$ es claramente una función aritmética en $\mathbb{N}$, a la cuál denotaremos en negritas como $\mathbf{c}$. Por ejemplo, $\mathbf{1}(n)=1, \forall n \in \mathbb{N}$.
 \end{definition}
 
-% \begin{proposition}
-% Si $a,b,a_1,a_2,\ldots ,a_n\in \mathbb{Z}$ y $p$ es un número primo, entonces:
-%
-% \begin{enumerate}[label=\textnormal{(\roman*)}]
-% 	\item $p \mid a$ ó $1=(a,p)$
-% 	\item $p \mid a b \implies p \mid a$ ó $p \mid b$
-% 	\item $p \mid a_1 a_2 \cdots a_n \implies p \mid a_i$, para algún $i=1,2,\ldots ,n$.
-% \end{enumerate}
-% \begin{proof}
-% De (i): Si $d=(a,p)$ entonces $d \mid p$ y $d \mid a$ y como $p$ es primo, $d=p$ o $d=1$. Si $d=p$ entonces $p \mid a$. Si $d=1$ entonces $1=(a,p)$.
-% \bigskip
-%
-% De (ii): Supongamos por ejemplo que $p \centernot\mid a$, entonces por el inciso anterior $1=(a,p)$, así que el lema de Euclides implica que $p \mid b$.
-% \bigskip
-%
-% De (iii): Se sigue por inducción de (ii).
-% \end{proof}
-% \end{proposition}
+La siguiente función aritmética, conocida como función de Möbius, es de importancia central en la teoría de números. Aunque a primera vista su definición parece más bien artificial, se verá que aparece naturalmente al derivar propiedades del producto de Dirichlet.
 
-\begin{corollary}
-Si $p$ es un número primo y $a\in \mathbb{Z}$ entonces 
+\begin{definition}[Función de Möbius]
+La función $\mu$ de Möbius está definida por $\mu(1)=1$ y dada $n=p_1^{\alpha_1}p_2^{\alpha_2}\cdots p_k^{\alpha_k}$ la factorización de $n$ en primos, entonces
 \begin{equation*}
-	(p,a) =
+	\mu(n) =
 		\begin{cases}
-			1 & \text{si} \: p \centernot\mid a \\ %\hfil
-			p & \text{si} \: p \mid a.
+			(-1)^k & \text{si} \: \alpha_1=\alpha_2=\cdots=\alpha_k=1 \\ \hfil
+			0 & \text{en otro caso} \: 
 		\end{cases}
 \end{equation*}
-\end{corollary}
-
-\begin{lemma}\label{lemma:pr1}
-Si $a>1$ y $a\in \mathbb{Z}$, entonces el menor divisor positivo de $a$ mayor que uno es un número primo.
-\end{lemma}
-\begin{proof}
-Sea $A=\left\{m\in\mathbb{N} \: : \: m \mid a\right\}$. Como $a\in A$, entonces $A\neq\vc$ y por tanto $A$ tiene elemento mínimo, digamos $p$. Si $p$ no fuera primo, entonces $p=qr$ para algunos $q,r\in \mathbb{Z}$ con $1<q<p$ y $1<r<p$. Entonces $q \mid p$, y además $p \mid a$, por tanto $q \mid a$, lo que contradice la elección de $p$, luego $p$ debe de ser primo.
-\end{proof}
-
-\begin{theorem}[de factorización única]
-Si $a\in \mathbb{Z}$ y $a>1$, entonces $a$ se puede expresar como
-\begin{equation*}
-	a=p_1 p_1\cdots p_r
-\end{equation*}
-donde los $p_i$ son números primos y $r\in\mathbb{N}$. Además, si $a=q_1 q_2\ldots q_s$ es otra factorización de esta forma, entonces $r=s$ y existe una permutación $\sigma: \left\{1,2,\ldots ,r\right\} \longrightarrow \left\{1,2,\ldots ,r\right\}$ tal que $p_i=q_{\sigma(i)}, \:\forall \: i\in \left\{1,2,\ldots ,r\right\}$.
-\end{theorem}
-\begin{proof}
-\cite[\S I.2, pp. 23--24]{Zal1-2014}. Una demostración no constructiva se puede encontrar en \cite[\S 2.11, p. 26]{Har1-1979}.
-\end{proof}
-
-\begin{definition}
-Si $n>1$ es un entero con factorización $a=p_1\cdots p_m$, podemos asociar primos iguales y escribirlos en orden creciente, es decir escribir a $n$ de la forma $n=p_1^{\alpha_1}p_2^{\alpha_2}\cdots p_s^{\alpha_s}$, donde $0<p_i,\:\forall \: i=1,\ldots ,s$ y $p_1<p_2<\cdots <p_s$. Decimos entonces que esta es la \textbf{forma estándar} o \textbf{descomposición canónica} de $n$ como producto de primos. También decimos que un número primo tiene multiplicidad $\alpha$ en $n$ si aparece $\alpha$ veces como factor de $n$.
 \end{definition}
 
-\begin{theorem}[Eratóstenes]
-Sea $n\in \mathbb{N}$, $a>1$. Si para cada primo tal que $p^2\leq a$ se tiene que $p \centernot\mid a$, entonces $a$ es primo.
-\end{theorem}
+Una primera forma natural de operar funciones aritméticas es haciéndo su suma o multiplicación puntual, obteniéndo otra función aritmética.
+
+\begin{definition}
+Si $f,g \in \mathcal{A}$, definimos la \textbf{suma} de $f$ y $g$ como la función \begin{align*}
+    f+g : \mathbb{N} & \longrightarrow \mathbb{C} \\
+    n & \longmapsto f(n)+g(n)
+\end{align*}
+y el \textbf{producto} de $f$ y $g$ como la función
+\begin{align*}
+    fg : \mathbb{N} & \longrightarrow \mathbb{C} \\
+    n & \longmapsto f(n)g(n).
+\end{align*}
+\end{definition}
+
+Es fácil verificar que para cualesquiera funciones aritméticas $f$ y $g$,
+\begin{enumerate}[label=\textnormal{(\roman*)}]
+\item $f+\mathbf{0}=\mathbf{0}+f=f$ 
+\item $f\mathbf{1}=\mathbf{1}f=f$ 
+\item $f+g=g+f$
+\item $fg=gf$.
+\end{enumerate}
+
+\subsection{Convolución de Dirichlet}
+
+\begin{definition}
+Sean $f$ una función aritmética, $n\in\mathbb{N}$ y $d_1,d_2,\cdots,d_k$ todos los divisores positivos de $n$. Definimos 
+\begin{equation*}
+	\sum_{d \mid n} f(d)=f(d_1)+f(d_2)+\cdots+f(d_k).
+\end{equation*}
+\end{definition}
+
+\begin{definition}[Convolución de Dirichlet]
+Si $f$ y $g$ son funciones aritméticas, definimos la \textbf{convolución de Dirichlet} o \textbf{producto de Dirichlet} de $f$ y $g$, como la función aritmética $f*g$ definida como:
+\begin{equation*}
+	(f*g)(n)=\sum_{d \mid n} f(d)g\left(\frac{n}{d}\right),\:\forall \: n\in\mathbb{N}.
+\end{equation*}
+\end{definition}
+
+Para ver que la operación $*$ es asociativa, conmutativa y distributiva respecto a la suma, necesitaremos algunos lemas.
+
+\begin{lemma}
+Si $k\in\mathbb{N}$, $D\subset \mathbb{N}$ y $f,g: \{1,\ldots,k\} \longrightarrow D$ son dos funciones biyectivas y estrictamente crecientes, entonces $f=g$.
+\end{lemma}
 \begin{proof}
-Sea $m$ el menor entero mayor que 1 que divide a $a$. Por el lema \eqref{lemma:pr1}, $m$ debe ser un número primo. Como $m \mid a$, entonces $m\leq a$.
+Como $D\subset \mathbb{N}$ podemos ordenar los elementos de $D$, digamos $D=\{d_1,\ldots,d_k\}$, donde $d_1<d_2<\cdots<d_k$. Tenemos que $d_1$ es entonces el elemento mínimo de $D$. Sin embargo, tenemos que $f(1)\leq f(i)$ y $g(1)\leq g(i),\:\forall \: i=1,\ldots,k$ y como $f$ y $g$ son suprayectivas, entonces $f(1)\leq d_1$ y $g(1)\leq d_1$, además $d_1\leq f(1)$ y $d_1\leq g(1)$ por ser $d_1$ el elemento mínimo de $D$. Luego $f(1)=d_1=g(1)$.
 \bigskip
 
-Supongamos que $m<a$. Como $m \mid a$, existe $q\in \mathbb{N}$ tal que $a=mq$, luego $q \mid a$. Más aún, $1<q$, pues $m<a$ y en consecuencia $m\leq q$ por elección de $m$. Luego
-\begin{equation*}
-	m^2\leq mq=a.
-\end{equation*}
-Luego $m$ es un primo tal que $m^2\leq a$ y $m \mid a$, lo que contradice la hipótesis. Por tanto debe ser que $m=a$ y como $m$ es primo, $a$ también lo es.
-\end{proof} \begin{corollary}
-Si $a\in\mathbb{N}$ no es primo entonces existe un primo $p$ tal que $p\leq \sqrt{a}$ y $p \mid a$.
-\end{corollary}
+%Ahora, tenemos que $d_2$ es el elemento mínimo de $D \setminus \{d_1\}$. Notemos que $f(2),g(2)\in D \setminus \{d_1\}$. En efecto, si $f(2)=d_1$ o $g(2)=d_1$, entonces $f(2)=f(1)$ o $g(2)=g(1)$ y como ambas funciones son inyectivas, entonces $2=1$, lo cual es absurdo. En consecuencia $d_2\leq f(2)$ y $d_2\leq g(1)$. Por otro lado, como $d_2\in D$, deben existir $i_1,i_2\in \{1,\ldots,k\}$ tales que $f(i_1)=d_2$ y $g(i_2)=d_2$. Más aún, $2\leq i_1$ y $2\leq i_2$, pues en caso contrario se tendría $i_1=1$ o $i_2=1$ y por tanto $f(1)=d_2$ o $g(1)=d_2$, es decir, $d_1=d_2$, lo cual es falso por hipótesis. Luego $f(2)\leq f(i_1)=d_2$ y $g(2)\leq f(i_2)=d_2$ y por tanto $f(2)=d_2=g(2)$.
+%\bigskip
 
-\begin{theorem}[Euclides]
-El conjunto de números primos es infinito.
-\end{theorem}
+Supongamos que $f(i)=d_i=g(i),\:\forall \: i=1,\ldots,n$ y $n+1\leq k$. Si $n+1=k$, como $f$ y $g$ son biyectivas, necesariamente $f(n+1)=d_{n+1}=g(n+1)$. Supongamos pues que $n+1<k$. Tenemos que $d_{n+1}$ es el elemento mínimo del conjunto $D \setminus \{1,\ldots,d_n\}$. Notemos que $f(n+1),g(n+1)\in D\setminus \{1,\ldots,d_n\}$. En efecto, pues si $f(n+1)=d_{i_1}$ o $g(n+1)=d_{i_2}$, para algunos $i_1,i_2\in \{1,\ldots,n\}$, entonces $f(n+1)=f(i_1)$ y $g(n+1)=g(i_2)$ por hipótesis de inducción y por inyectividad se tendría que $n+1=i_1\leq n$ o $n+1=i_2\leq n$, lo cual es absurdo. En consecuencia $f(n+1),g(n+1)\in D \setminus \{1,\ldots,d_n\}$ y por tanto $d_{n+1}\leq f(n+1)$ y $d_{n+1}\leq g(n+1)$. 
+\bigskip
+
+Por otra parte, se tiene por suprayectividad que existen $j_1,j_2\in \{1,\ldots,k\}$ tales que $f(j_1)=d_{n+1}$ y $g(j_2)=d_{n+1}$, más aún, $n+1\leq j_1$ y $n+1\leq j_2$, pues en caso contrario se tendría que $j_1<n$ o $j_2<n$, es decir, $f(j_1)<f(n)$ o $g(j_2)<g(n)$, es decir, $d_{n+1}<d_n$, lo que contradice la hipótesis. Luego $f(n+1)\leq f(j_1)=d_{n+1}$ y $g(n+1)\leq g(j_2)=d_{n+1}$. Se sigue finalmente que $f(n+1)=d_{n+1}=g(n+1)$.
+\end{proof}
+
+\begin{lemma}\label{lemma:div1}
+Si $n\in\mathbb{N}$ y $d_1=1<d_2<\cdots<d_{k-1}<d_k=n$ son todos los divisores positivos de $n$, entonces $d_i d_{k+1-i}=n,\:\forall \: i=1,\ldots,k$.
+\end{lemma}
 \begin{proof}
-Supongamos lo contrario y listemos todos los primos como $p_1,\ldots ,p_m$. Consideremos el entero $n=p_1\cdots p_m+1$. Tenemos que $n>1$ y por tanto debe ser primo o producto de primos. Si $n$ es primo, entonces $n=p_i$ para algún $i=1,\ldots ,m$, pero esto es imposible pues $n>p_i,\:\forall \: i=1,\ldots ,m$. Si $n$ es producto de primos, entonces algún $p_i$ lo divide, pero esto tampoco puede ser pues todos los $p_i$ dejan residuo 1 al dividir a $n$, es decir, ningún primo lo divide. En consecuencia el conjunto de números primos no es finito.
+Sea $D=\{d_1,\ldots,d_k\}$ y consideremos las funciones $f: \{1,\ldots,k\} \longrightarrow D$ definida como $f(i)=d_i,\:\forall \: i=1,\ldots,k$ y $g: \{1,\ldots,k\} \longrightarrow D$ definida como $g(i)=n/d_{k+1-i},\:\forall \: i=1,\ldots,k$. Es fácil ver que $f$ y $g$ cumplen las condiciones del lema anterior y por tanto $f(i)=g(i),\:\forall \: i=1,\ldots,k$, es decir, $d_i d_{k+1-i}=n,\:\forall \: i=1,\ldots,k$.
+\end{proof}
+
+\begin{proposition}\label{prop:dir1}
+Si $f$ y $g$ son funciones aritméticas, $n\in\mathbb{N}$ y $d_1<\cdots<d_k$ son todos los divisores positivos de $n$, entonces 
+\begin{equation*}
+	(f*g)(n)=\sum_{i=1}^{k} f(d_i)g(d_{k+1-i})=f(d_1)g(d_k)+\cdots+f(d_k)g(d_1).
+\end{equation*}
+\begin{proof}
+Se sigue de la definición de $(f*g)(n)$ y del \Cref{lemma:div1}.
+\end{proof}
+\end{proposition}
+
+\begin{definition}[Función identidad]
+Definimos a la función identidad $I$ como 
+\begin{equation*}
+	I(n) =
+		\begin{cases}
+			\hfil 1 & \text{si} \: n=1 \\ 
+			\hfil 0 & \text{si} \: n>1,
+		\end{cases}
+\end{equation*}
+para cada $n\in\mathbb{N}$.
+\end{definition}
+
+La siguiente proposición muestra que la función $I$ actúa como la identidad bajo la convolución de Dirichlet, entre otras propiedades algebraicas.
+
+\begin{proposition}
+Si $f,g$ y $h$ son funciones aritméticas entonces se verifica lo siguiente:
+
+\begin{enumerate}[label=\textnormal{(\roman*)}]
+	\item $(f*g)*h=f*(g*h)$
+	\item $f*I=I*f=f$
+	\item $f*(g+h)=(f*g)+(f*h)$
+	\item $f*g=g*f$
+\end{enumerate}
+\end{proposition}
+\begin{proof}
+Sea $n\in\mathbb{N}$, sean $d_1=1<d_2<\cdots<d_k=n$ todos los divisores positivos de $n$ y para cada $i=1,\ldots,k$ sean $c_{i,1}<c_{i,2}<\cdots<c_{i,m_i}$ los divisores positivos de $d_i$.
+\bigskip
+
+(i) Tenemos que 
+\begin{equation}\label{eqn:sum1}
+	((f*g)*h)(n)=\sum_{i=1}^{k} \sum_{j=1}^{m_i} f(c_{i,j})g(c_{i,m_i+1-j})h(d_{k+1-i})
+\end{equation}
+y 
+\begin{equation}\label{eqn:sum2}
+	(f*(g*h))(n)=\sum_{i=1}^{k} \sum_{j=1}^{m_{k+1-i}} f(d_i)g(c_{m_{k+1-i},j})h(c_{m_{k+1-i},m_{k+1-i}+1-j}).
+\end{equation}
+Definamos los conjuntos 
+\begin{align*}
+	& A=\left\{f(c_{i,j})g(c_{i,m_i+1-j})h(d_{k+1-i}) \: \mid i=1,\ldots,k,j=1,\ldots,m_i \: \right\} \\
+	& \\
+	& B=\left\{f(d_i)g(c_{m_{k+1-i},j})h(c_{m_{k+1-i},m_{k+1-i}+1-j}) \: \mid i=1,\ldots,k,j=1,\ldots,m_i \: \right\},
+\end{align*}
+y $C=\left\{f(a)f(b)f(c) \mid a,b,c\in\mathbb{N} \textrm{ y } a b c=n\right\}$. Afirmamos que $A=C$ y $B=C$. En efecto, si $f(c_{i,j})g(c_{i,m_i+1-j})h(d_{k+1-i})$, entonces $c_{i,j}c_{i,m_i+1-j}d_{k+1-i}=d_i d_{k+1-i}=n$, aplicando dos veces el \Cref{lemma:div1}. Recíprocamente, si $a,b,c\in\mathbb{N}$ son tales que $a b c = n$, entonces $c \mid n$, por tanto $c=d_j$, para algún $j=1,\ldots,k$, es decir, $c=d_{k+1-i}$ para $i=k+1-j$ con $i=1,\ldots,k$. Notemos entonces que por el lema \ref{lemma:div1}, necesariamente se debe tener $a b=d_i$, por lo que $a=c_{i,j}$, para algún $j=1,\ldots,m_i$ y aplicando el lema de nuevo se debe tener que $b=c_{i,m_i+1-j}$. En consecuencia $f(a)g(b)h(c)=f(c_{i,j})g(c_{i,m_i+1-j})h(d_{k+1-i})\in A$. Se sigue pues que $A=C$. Similarmente se demuestra que $B=C$.
+\bigskip
+
+Se tiene pues que $A=B$ y como las sumas \eqref{eqn:sum1} y \eqref{eqn:sum2} se extienden sobre los conjuntos $A$ y $B$, entonces deben coincidir, es decir, $((f*g)*h)(n)=(f*(g*h))(n)$.
+\bigskip
+
+(ii) Como $1<d_i,\:\forall \: i=2,\ldots,k$ entonces $I(d_i)=0,\:\forall \: i=2,\ldots,k$, luego por la proposición \eqref{prop:dir1} se tiene que
+\begin{align*}
+	(f*I)(n) &= \sum_{i=1}^{k} f(d_i)I(d_{k+1-i})=f(d_1)I(d_k)+\cdots+f(d_k)I(d_1) \\
+			 &= f(d_k)I(d_1)=f(n)I(1)=f(n)\cdot 1=f(n)
+\end{align*}
+Y
+\begin{align*}
+	(I*f)(n) &= \sum_{i=1}^{k} I(d_i)f(d_{k+1-i})=I(d_1)f(d_k)+\cdots+I(d_k)f(d_1) \\
+			 &= I(d_1)f(d_k)=I(n)f(1)=1\cdot f(n)=f(n)
+\end{align*}
+\bigskip
+
+(iii) Tenemos que 
+\begin{align*}
+	(f*(g+ & h)) (n) = \sum_{i=1}^{k} f(d_i)(g+h)(d_{k+1-i}) = \sum_{i=1}^{k} f(d_i)[g(d_{k+1-i})+h(d_{k+1-i})] \\
+		   & = \sum_{i=1}^{k} f(d_i)g(d_{k+1-i})+\sum_{i=1}^{k} f(d_i)h(d_{k+1-i}) = (f*g)(n)+(f*h)(n).
+\end{align*}
+\bigskip
+
+(iv) La conmutatividad de la convolución de Dirichlet es clara, pues 
+\begin{equation*}
+	(f*g)(n) = \sum_{i=1}^{k} f(d_i)g(d_{k+1-i}) = \sum_{i=1}^{k} g(d_i)f(d_{k+1-i})=(g*f)(n).
+\end{equation*}
 \end{proof}
