--- a/lec_06.tex
+++ b/lec_06.tex
@@ -1,236 +1,25 @@
-%%% Funciones pares
+%%% Divisibilidad
 \newpage
-\section{Funciones pares}
-
-Al estudiar el espacio de funciones aritméticas se puede hacer una analogía con la teoría de Fourier del análisis para funciones definidas en todo el plano real o complejo, para la cuál se necesitará la noción de periodicidad. En este capítulo se considerarán dos clases de funciones aritméticas que capturan esta noción y se probará que son equivalentes. También se expondran resultados análogos a los de análisis respecto a funciones periódicas.
-
-\begin{remark}
-Durante todo el capítulo se supondrá que $r$ es un entero positivo arbitrario pero fijo.
-\end{remark}
-
-\begin{definition}[Función par]
-Una función aritmética se dice \textbf{par} $\Mod{r}$ si $f(n)=f((n,r))$, donde $(m,r)$ es el máximo común divisor de $n$ y $r$, para cada $n \in \mathbb{N}$.
-\end{definition}
-
-\begin{definition}[Función periódica]
-Una función aritmética se dice \textbf{periódica} con periodo $r$ (o periódica $\Mod{r}$) si $m, n \in \mathbb{N}$ y $m \equiv n \pmod{r}$ implica que $f(m)=f(n)$.
-\end{definition}
-
-La siguiente proposición es una consecuencia inmediata de las definiciones anteriores.
+\appendix
+\section{Divisibilidad}
 
 \begin{proposition}
-Toda función par $\Mod{r}$ es periódica con periodo $r$.
+Si $r \in \mathbb{N}$, $r=e q_1$, $r= d q_2$, $d=(q_1,d)k_1$ y $e=(q_2,e) k_2$ entonces $k_1=k_2$.
 \end{proposition}
 \begin{proof}
-Si $m \equiv n \pmod{r}$ entonces $r \mid m-n$, por tanto existe $q \in \mathbb{Z}$ tal que $m-n=q r$. Por demostrar que $(n,r)=(m,r)$. En efecto, como $(n,r) \mid n$ y $(m,r) \mid r$, entonces $(m,r) \mid n+qr=m$, luego $(n,r) \mid (m,r)$. Análogamente, se tiene que $(m,r) \mid m$ y $(m,r) \mid r$, por lo que $(m,r) \mid m-q r=n$, luego $(m,r) \mid (n,r)$. Se sigue que $(n,r)=(m,r)$ y por tanto $f(n)=f((n,r))=f((m,r))=f(m)$.
+Nótese que $q_1,q_2$ enteros positivos, además $(q_1 q_2, r) = (q_1 q_2, r)$, luego $(q_1 q_2,e q_1)=(q_1 q_2,d q_2)$ y por tanto $q_1 (q_2,e)=q_2 (q_1,d)$ por la proposición anterior. Luego, dado que $r=(q_2,e)k_2 q_1=(q_1,d)k_1 q_2$, la ley de cancelación implica que $k_1 = k_2$.
 \end{proof}
 
-\subsection{Sumas de Ramanujan}
-
-\begin{definition}[Sumas de Ramanujan]
-Se define la función aritmética $c_r$ como
+\begin{corollary}\label{cor:mcd1}
+Si $r \in \mathbb{N}$, $e \mid r$ y $d \mid r$ con $e,r \in \mathbb{N}$, entonces
 \begin{equation*}
-    c_r(n) = \sum_{d \mid (n,r)} \mu \left( \frac{r}{d} \right) d.
-\end{equation*}
-Esta función será referida como la suma de Ramanujan módulo $r$ o simplemente suma de Ramanujan cuando no haya riesgo de confusión.
-\end{definition}
-
-\begin{proposition}
-Algunas propiedades de la sumas de Ramanujan son las siguientes:
-\begin{enumerate}[label=\textnormal{(\arabic*)},ref=\textnormal{\arabic*}]
-\item $c_1 = \mathbf{1}$
-\item $c_r(1) = \mu(r)$
-\item $c_r(n) \le \max \{ \sigma(r), \sigma(n) \}$
-\item \label{it:ram1} $c_r(n)$ es una función multiplicativa de $r$
-\item Si $p$ es primo y $m$ es un entero positivo, entonces
-    \begin{equation*}
-        c_{p^m}(n) = \begin{cases}
-            \hfil p^m - p^{m-1} & \text{si } p^m \mid n \\
-            \hfil -p^{m-1} & \text{si } p^{m-1} \text{ pero } p^m \centernot\mid n \\
-            \hfil 0 & \text{si } p^{m-1} \centernot\mid n.
-        \end{cases}
-    \end{equation*}
-\end{enumerate}
-\end{proposition}
-
-\begin{proof}
-\begin{enumerate}[label=\textnormal{(\arabic*)}]
-\item Para cada $n \in \mathbb{N}$ se tiene que $(n,1)=1$ y por tanto
-    \begin{equation*}
-        c_1(n) = \sum_{d \mid (n,1)} \mu \left( \frac{1}{d} \right) d = \mu(1) 1 = 1.
-    \end{equation*}
-\item De manera similar,
-    \begin{equation*}
-        c_r(1) = \sum_{d \mid (1,r)} \mu \left( \frac{r}{d} \right) d = \mu(r) 1 = \mu(r).
-    \end{equation*}
-\item Por definición se tiene que $\sigma(k) = \sum_{d \mid k} d$. Además $\mu(k) \le 1$ para todo $k \in \mathbb{N}$, luego
-    \begin{equation*}
-        c_r(n) = \sum_{d \mid (n,r)} \mu \left( \frac{r}{d} \right) d \le \sum_{d \mid (n,r)} d = \sum_{\substack{d \mid n \\ d \mid r}} d \le \sum_{d \mid n} d, \sum_{d \mid r} d \le \max \{ \sigma(n),\sigma(r) \}.
-    \end{equation*}
-\item Defínase
-    \begin{equation*}
-        \eta_r(n) = \begin{cases}
-            \hfil r & \text{si } r \mid n \\
-            \hfil 0 & \text{en otro caso}.
-        \end{cases}
-    \end{equation*}
-Se tiene que la función $\eta_\Box(n)$ es multiplicativa para $n$ fijo. En efecto, si $r,s \in \mathbb{N}$ son tales que $(r,s)=1$, entonces
-\begin{equation*}
-    \eta_{r s}(n) = \begin{cases}
-        \hfil r s & \text{si } r s \mid n \\
-        \hfil 0 & \text{en otro caso,}
-    \end{cases}
-\end{equation*}
-pero $r s \mid n$ si y sólo si $r \mid n$ y $s \mid n$. En efecto, si $r s \mid n$ es claro que $r \mid n$ y $s \mid n$. Supóngase que $r \mid n$ y $s \mid n$, de tal manera que existen $q_1, q_2 \in \mathbb{Z}$ tales que $n=r q_1=s q_2$. Como $(r,s)=1$, también existen $x, y \in \mathbb{Z}$ tales que $1=r x + s y$, luego $n=n r x + n s y$, por lo que $n= r s (q_2 x + q_1 y)$, es decir, $r s \mid n$. Luego, si $r s \mid n$, entonces
-\begin{equation*}
-    \eta_{r s}(n) = r s = \eta_r(n) \eta_s(n),
-\end{equation*}
-y si $r s \centernot\mid$ entonces $r \centernot\mid n$ y $s \centernot\mid n$, por lo que
-\begin{equation*}
-    \eta_{r s}(0) = 0 = \eta_r(n) \eta_s(n).
-\end{equation*}
-
-Por otro lado, se tiene que
-\begin{equation*}
-    \sum_{d \mid r} \mu \left( \frac{r}{d} \right) \eta_d(n) = \sum_{\substack{d \mid r \\ d \mid n}} \mu \left( \frac{r}{d} \right) d = \sum_{d \mid (n,r)} \mu \left( \frac{r}{d} \right) d = c_r(n),
-\end{equation*}
-es decir, $c_\Box(n)=\mu*\eta_\Box(n)$. Luego $c_\Box(n)$ debe ser multiplicativa para $n$ fijo, por ser producto de funciones multiplicativas.
-\item Tenemos los siguientes casos:
-\begin{itemize}
-\item Si $p^m \mid n$, entonces $(n,p^m)=p^m$, luego
-    \begin{equation*}
-        c_{p^m}(n) = \sum_{d \mid p^m} \mu \left( \frac{p^m}{d} \right) d = \mu(1) p^m + \mu(p) p^{m-1} = p^m - p^{m-1},
-    \end{equation*}
-    pues $\mu(p^i)=0$ para toda $i > 1$.
-\item Si $p^{m-1} \mid n$ pero $p^m \centernot\mid n$, entonces $(n,p^m)=p^{m-1}$. En efecto, se tiene que $p^{m-1} \mid p^m$ y además $p^{m-1} \mid n$ por hipótesis. Si $e \in \mathbb{Z}$ es tal que $e \mid p^{m}$ y $e \mid n$, entonces $e=p^i$, para algún $0 \le i \le m-1$, pues $p^m \centernot\mid n$, por tanto $e \mid p^{m-1}$. Esto prueba que $(p^m,n)=p^{m-1}$, así
-    \begin{equation*}
-        c_{p^m}(n) = \sum_{d \mid p^{m-1}} \mu \left( \frac{p^m}{d} \right) d = \mu(p) p^{m-1} = -p^{m-1}
-    \end{equation*}
-    
-\item Finalmente, si $p^{m-1} \centernot\mid n$, entonces $p^m \centernot\mid n$. Además, $(n,p^m) \mid p^m$, por tanto $(n,p^m)=p^i$ para algún $0 \le i \le m$. Más aún, por la hipótesis se debe tener que $0 \le i \le m-2$. Luego
-    \begin{equation*}
-        c_{p^m}(n) = \sum_{d \mid p^i} \mu \left( \frac{p^m}{d} \right) d = \mu(p^m)1+ \mu(p^{m-1}) p + \cdots + \mu(p^{m-i}) p^i = 0,
-    \end{equation*}
-    pues $i \le m-2$ implica que $2 \le m-i$ y por tanto $\mu(p^i)=0$.
-\end{itemize}
-\end{enumerate}
-\end{proof}
-
-Del la demostración del \cref{it:ram1} se puede rescatar el siguiente corolario, usando la inversión de Möbius (\cref{cor:mob1}).
-
-\begin{corollary}
-Para cada $n \in \mathbb{N}$ fijo se tiene
-\begin{equation*}
-    \sum_{d \mid r} c_d(n) = \eta_r(n) = \begin{cases}
-        \hfil r & \text{si } r \mid n \\
-        \hfil 0 & \text{en otro caso}.
-    \end{cases}
+    d/\left( r/e,d \right) = e/\left( r/d,e \right).
 \end{equation*}
 \end{corollary}
 
-Las sumas de Ramanujan gozan de la siguiente propiedad de ``ortogonalidad''.
-
-\begin{lemma}\label{lem:ram4}
-Si $r$ y $s$ dividen a $k$, entonces
-\begin{equation*}
-    \sum_{d \mid k} c_r(k/d) c_d(k/s) = \begin{cases}
-        \hfil k & \text{si } r = s \\
-        \hfil 0 & \text{en otro caso}.
-    \end{cases}
-\end{equation*}
-\end{lemma}
-\begin{proof}
-Si $r$ y $s$ dividen a $k$, entonces
-\begin{equation} \label{eq:ram2}
-\begin{split}
-\sum_{d \mid k} c_r (k/d) c_d (k/s) &= \sum_{d \mid k} c_d (k/s) \sum_{d' \mid (k/d,r)} \mu (r/d') d' \\
-                                                                              &= \sum_{d \mid k} c_d (k/s) \sum_{\substack{d' \mid r \\ d' \mid k/d}} \mu(r/d') d' \\
-                                                                              &= \sum_{\substack{d \mid k \\ d' \mid r \\ d' \mid k/d}} c_d (k/s) \mu (r/d') d' \\
-                                                                              &= \sum_{\substack{d \mid k/d' \\ d' \mid r \\ d' \mid r}} c_d(k/s) \mu(r/d')  d' \\
-                                                                              &= \sum_{\substack{d' \mid r \\ d' \mid k}} \mu(r/d') d' \sum_{d \mid k/d'} c_d(k/s) \\
-                                                                              &= \sum_{d' \mid (k,r)} \mu(r/d) d' \eta_{k/d'} (k/s), \text{por el corolario anterior} \\
-                                                                              &= \sum_{d' \mid r} \mu(r/d) d' \eta_{k/d'} (k/s),
-\end{split}
-\end{equation}
-dado que $(k,r)=r$ por ser $r$ divisor de $k$ y dado que los conjuntos $\{ d,d' \in \mathbb{N} \std d \mid k, d' \mid r, d' \mid k/d \}$ y $\{ d,d' \in \mathbb{N} \std d \mid k/d', d' \mid r, d' \mid k \}$ son iguales. En efecto, si $d \mid k$ entonces $k/d$ es un entero, lueg $d' \mid k/d$ implica que $k/d=d' q'$, luego $k=d' q' d$, por tanto $d \mid k/d'$ y $d' \mid k$.
-\bigskip
-
-Recíprocamente, si $d' \mid k$ entonces $k/d'$ es un entero, luego $d \mid k/d'$ implica que $k/d'=dq$, por tanto $k=d q d'$, por tanto $d \mid k$ y $d' \mid k/d$.
-\bigskip
-
-Si $s \centernot\mid r$ entonces $s \centernot\mid d'$ y por tanto $k/d' \centernot\mid k/s$. En efecto, pues si $s \mid d'$, como $d' \mid r$ entonces se tendría que $s \mid r$ por transitividad. Además, si $k/d' \mid k/s$ se tendría que $s \mid d'k$. Luego la suma \eqref{eq:ram2} se anula si $s \centernot\mid r$ y en particular si $r \ne s$, pues en este caso se tiene que $\eta_{k/d'}(k/s)=0$ para cada $d' \mid r$. 
-\bigskip
-
-Si $s \mid r$ entonces la suma \eqref{eq:ram2} es igual a
-\begin{equation*}
-\begin{split}
-    \sum_{\substack{d' \mid r \\ k/d' \mid k/s}} \mu(r/d') d' \frac{k}{d'} &= \sum_{\substack{d' \mid r \\ k/d' \mid k/s}} \mu(r/d') k \\
-    &= \sum_{\substack{d' \mid r \\ s \mid d'}} \mu(r/d') k \\
-    &= k \sum_{\substack{d' \mid r \\ d'=se}} \mu(r/se) \\
-    &= k \sum_{e \mid r/s} \mu(r/se) \\
-    &= k \sum_{se \mid r} \mu(r/se) = \begin{cases}
-        \hfil k & \text{si } r=s \\
-        \hfil 0 & \text{en otro caso,}
-    \end{cases}
-\end{split}
-\end{equation*}
-pues $k/d' \mid k/s$ si y sólo si $s \mid d'$.
-\end{proof}
-
-\begin{lemma}
-Si $d \mid r$ entonces $c_d(n)=c_d((n,r))$.
-\end{lemma}
-\begin{proof}
-Si $d \mid r$ entonces $(n,d)=((n,r),d)$. En efecto, dado que $(n,d) \mid n$ y $(n,d) \mid d$, entonces $(n,d) \mid n$, $(n,d) \mid d$ y $(n,d) \mid r$, por lo que $(n,d) \mid (n,r)$ y $(n,d) \mid d$, es decir, $(n,d) \mid ((n,r),d)$. Recíprocamente se tiene que $((n,r),d) \mid n$ y $((n,r),d) \mid d$, así que $((n,r),d) \mid (n,d)$. Se sigue que $(n,d)=((n,r),d)$. Luego
-\begin{equation*}
-    c_d(n) = \sum_{e \mid (n,d)} \mu(d/e) e = \sum_{e \mid ((n,r),d)} \mu(d/e) e = c_d((n,r)).
-\end{equation*}
-\end{proof}
-
-\begin{corollary}
-La suma de Ramanujan módulo $r$ es par $\Mod{r}$.
-\end{corollary}
-
-El lema anterior permite probar uno de los resultados importantes de este capítulo, el cuál establece la existencia de una expansión finita de cualquier función par $\Mod{r}$, con sumas de Ramanujan como coeficientes.
-
-\begin{theorem}
-Toda función $f$ par $\Mod{r}$ tiene una expansión de la forma
-\begin{equation}\label{eq:ram3}
-    f(n) = \sum_{d \mid r} \alpha(d) c_n(n),
-\end{equation}
-y recíprocamente, toda función aritmética de esta forma es par $\Mod{r}$. Los coeficientes $\alpha(d)$ están dados por
-\begin{equation*}
-    \alpha(d) = \frac{1}{r} \sum_{e \mid r} f \left( \frac{r}{e} \right) c_e \left( \frac{r}{d} \right),
-\end{equation*}
-o por la fórmula equivalente,
-\begin{equation*}
-    \alpha(d) = \frac{1}{r \phi(d)} \sum_{m=1}^{r} f(m) c_d(m),
-\end{equation*}
-donde $\phi$ es la función phi de Euler.
+\begin{theorem}[Lema de Euclides]
+Si $a \mid bc$ y $(a,b)=1$ entonces $a \mid c$.
 \end{theorem}
 \begin{proof}
-Es claro que toda función de la forma \eqref{eq:ram3} es par $\Mod{r}$, pues por el lema anterior si $d \mid r$ entonces $c_d(n)=c_d((n,r))$. Nótese que
-\begin{equation*}
-\begin{split}
-    \sum_{d \mid r} \alpha(d) c_d(n) &= \sum_{d \mid r} \left( \frac{1}{r} \sum_{e \mid r} f \left( \frac{r}{e} \right) c_e \left( \frac{r}{d} \right) \right) c_d(n) \\
-                                     &= \frac{1}{r} \sum_{e \mid r} f \left( \frac{r}{e} \right) \sum_{d \mid r} c_e \left( \frac{r}{d} \right) c_d(n) \\
-                                     &= \frac{1}{r} \sum_{e \mid r} f \left( \frac{r}{e} \right) \sum_{d \mid r} c_e \left( \frac{r}{d} \right) c_d((n,r)) \\
-                                     &= \frac{1}{r} f \left( \frac{r}{q} \right) r = f((n,r)) = f(n),
-\end{split}
-\end{equation*}
-por el \Cref{lem:ram4}, donde $r=(n,r) q$, para algún $q \in \mathbb{N}$ y donde la última igualdad se cumple por ser $f$ par $\Mod{r}$.
-\bigskip
-
-Por otro lado, de la demostración de la \cref{eq:gauss1} se puede rescatar el hecho de que el conjunto $\{ 1,2,\ldots,r \}$ es igual a $\bigcup_{e \mid r} \{ rx/e \std (x,e)=1, 1 \le x \le e \}$ y todos los conjuntos son disjuntos a pares, por tanto
-\begin{equation*}
-\begin{split}
-    \frac{1}{r \phi(d)}\sum_{m=1}^{r} f(m) c_d(m) &= \frac{1}{r \phi(d)}\sum_{e \mid r} \sum_{\substack{(x,e)=1 \\ 1 \le x \le e}} f \left( \frac{rx}{e} \right) c_d \left( \frac{rx}{e} \right) \\
-                               &= \frac{1}{r \phi(d)}\sum_{e \mid r} \sum_{\substack{(x,e)=1 \\ 1 \le x \le e}} f \left( \left( \frac{rx}{e},r \right) \right) c_d \left( \left( \frac{rx}{e},r \right) \right) \\
-                               &= \frac{1}{r \phi(d)}\sum_{e \mid r} \sum_{\substack{(x,e)=1 \\ 1 \le x \le e}} f \left( \frac{r}{e} \right) c_d \left( \frac{r}{e} \right) \\
-                               &= \frac{1}{r \phi(d)}\sum_{e \mid r} f \left( \frac{r}{e} \right) c_d \left( \frac{r}{e} \right) \phi(e) \\
-                               &= \frac{1}{r \phi(d)}\sum_{e \mid r} f \left( \frac{r}{e} \right) c_e \left( \frac{r}{d} \right) \phi(d) \\
-                               &= \frac{1}{r}\sum_{e \mid r} \left( \frac{r}{e} \right) c_e \left( \frac{r}{d} \right)
-\end{split}
-\end{equation*}
-por ser $f$ par $\Mod{r}$. Además $(rx/e,r)=r/e$, pues $(x,e)=1$ implica que $(r/e)(x,e)=r/e$, y como $r/e$ es un entero positivo, entonces $(rx/e,r)=r/e$. Y la penúltima igualdad se cumple por el {\renewcommand\ttdefault{cmtt}\texttt{cor:mcd1}} y la fórmula de Hölder.
+Si $(a,b)=1$, podemos escribir $1=a s+b t$, donde $s,t\in \mathbb{Z}$. Luego $c=a(s c)+b c(t)$ y como $a \mid a$ y $a \mid bc$ por hipótesis, entonces $a \mid c$.
 \end{proof}
